--- a/Resources/Private/Language/locallang_csh_tx_typo37timerextension_domain_model_configuration.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_typo37timerextension_domain_model_configuration.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:typo3_7timer_extension/Resources/Private/Language/locallang_csh" date="2021-07-29T08:55:55Z" product-name="typo3_7timer_extension">
+	<file source-language="en" datatype="plaintext" original="EXT:7timer_extension/Resources/Private/Language/locallang_csh" date="2021-07-29T08:55:55Z" product-name="7timer_extension">
 		<header/>
 		<body>
 			<trans-unit id="label.description" resname="label.description">
