--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:typo3_7timer_extension/Resources/Private/Language/locallang_db" date="2021-07-29T08:55:55Z" product-name="typo3_7timer_extension">
+	<file source-language="en" datatype="plaintext" original="EXT:7timer_extension/Resources/Private/Language/locallang_db" date="2021-07-29T08:55:55Z" product-name="7timer_extension">
 		<header/>
 		<body>
-			<trans-unit id="tx_typo37timerextension_domain_model_configuration" resname="tx_typo37timerextension_domain_model_configuration">
+			<trans-unit id="tx_7timerextension_domain_model_configuration" resname="tx_7timerextension_domain_model_configuration">
 				<source>Configuration</source>
 			</trans-unit>
-			<trans-unit id="tx_typo37timerextension_domain_model_configuration.label" resname="tx_typo37timerextension_domain_model_configuration.label">
+			<trans-unit id="tx_7timerextension_domain_model_configuration.label" resname="tx_7timerextension_domain_model_configuration.label">
 				<source>Label</source>
 			</trans-unit>
-			<trans-unit id="tx_typo37timerextension_domain_model_configuration.lon" resname="tx_typo37timerextension_domain_model_configuration.lon">
+			<trans-unit id="tx_7timerextension_domain_model_configuration.lon" resname="tx_7timerextension_domain_model_configuration.lon">
 				<source>Lon</source>
 			</trans-unit>
-			<trans-unit id="tx_typo37timerextension_domain_model_configuration.lat" resname="tx_typo37timerextension_domain_model_configuration.lat">
+			<trans-unit id="tx_7timerextension_domain_model_configuration.lat" resname="tx_7timerextension_domain_model_configuration.lat">
 				<source>Lat</source>
 			</trans-unit>
-			<trans-unit id="tx_typo37timerextension_domain_model_configuration.type" resname="tx_typo37timerextension_domain_model_configuration.type">
+			<trans-unit id="tx_7timerextension_domain_model_configuration.type" resname="tx_7timerextension_domain_model_configuration.type">
 				<source>Type</source>
 			</trans-unit>
-			<trans-unit id="tx_typo3_7timer_extension_7timerextensionplugin.name" resname="tx_typo3_7timer_extension_7timerextensionplugin.name">
+			<trans-unit id="tx_7timer_extension_7timerplugin.name" resname="tx_7timer_extension_7timerplugin.name">
 				<source>7Timer Plugin</source>
 			</trans-unit>
-			<trans-unit id="tx_typo3_7timer_extension_7timerextensionplugin.description" resname="tx_typo3_7timer_extension_7timerextensionplugin.description">
+			<trans-unit id="tx_7timer_extension_7timerplugin.description" resname="tx_7timer_extension_7timerplugin.description">
 				<source></source>
 			</trans-unit>
 		</body>
